--- a/_posts/2022-02-24.art_of_procrastination.md
+++ b/_posts/2022-02-24.art_of_procrastination.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Why I procrastinated for almost a year?
-subtitle: “Procrastination gives you something to look forward to.” — Joan Konner
+subtitle: Procrastination gives you something to look forward to — Joan Konner
 tags: [random blurb]
 comments: true
 ---
